--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ openai==1.3.5
 # langchain==0.0.342
 # langchain-core==0.0.7
 # langchain-experimental==0.0.43
-langsmith==0.0.66
+# langsmith==0.0.66
 tiktoken==0.5.1
 docarray==0.39.1
 pydantic==1.10.13
