--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,25 @@
 # python==3.11.5
 openai==1.3.5
-# langchain==0.0.342
-# langchain-core==0.0.7
-# langchain-experimental==0.0.43
-# langsmith==0.0.66
-# tiktoken==0.5.1
-# docarray==0.39.1
+langchain==0.0.342
+langchain-core==0.0.7
+langchain-experimental==0.0.43
+langsmith==0.0.66
+tiktoken==0.5.1
+docarray==0.39.1
 pydantic==1.10.13
 # streamlit==1.28.2
 modal==0.55.4147
 # graphviz
-# transformers==4.35.2
-# SentencePiece==0.1.99
-# torch==2.1.1
-# accelerate==0.24.1
-# pillow
+transformers==4.35.2
+SentencePiece==0.1.99
+torch==2.1.1
+accelerate==0.24.1
+pillow
 toml
-# matplotlib
+matplotlib
 rich
 pathlib
-# ipykernel
+ipykernel
 python-dotenv
 tdqm
 # poetry
